# wrappy

./: BINDINGS.md  CLAUDE.md  CLI_FRAMEWORK.md  CONCEPT.md  Cargo.toml  ISAFH.md  README.md  package.json  test-injection.js
docs/: architecture.md  bindings.md  concept.md  manifest.md
examples/hello-world/: README.md  manifest.json
examples/hello-world/config/: environment.json  permissions.json
examples/hello-world/content/: app.js
examples/hello-world/scripts/: default.sh  english.sh
examples/test-container/: manifest.json
examples/test-container/config/: environment.json  permissions.json
examples/test-container/scripts/: default.sh  start.sh
src/: error.rs  index.js  lib.rs  main.rs
src/cli/: mod.rs  router.rs
src/core/: ContainerStructure.js  ContainerValidator.js  DependencyInjector.js  mod.rs
src/core/container/: mod.rs
src/core/manifest/: mod.rs
src/core/version/: mod.rs
src/features/: mod.rs
src/features/bindings/: commands.rs  manager.rs  mod.rs  types.rs  wrapper.rs
src/features/container/: commands.rs  mod.rs  service.rs  tests.rs
src/features/manifest/: mod.rs  tests.rs
src/features/version/: mod.rs  tests.rs
src/shared/: error.rs
src/types/: Container.js
